--- a/instincts.yaml
+++ b/instincts.yaml
@@ -1,18 +1,192 @@
 ---
-version: "2.0"
+version: "2.1"
 exported_by: "continuous-learning-v2"
-export_date: "2026-02-22T09:30:00Z"
+export_date: "2026-02-22T17:35:00Z"
+source_session: "ses_37b598752ffe8cyf5D822PNSSN"
 ---
 
+# 我的本能备份
+# 基于 OpenCode Session 分析创建
+# 包含历史学习经验和用户偏好
+
 instincts:
+  # === 核心工作流本能 ===
+
   - id: project-retrospective-workflow
     trigger: "when user asks for retrospective or lesson learned"
     confidence: 0.9
     domain: workflow
-    source: retrospective-session-2026-02-07
+    source: retrospective_session_2026_02_07
 
   - id: fullstack-development-principles
     trigger: "when starting a full-stack development project"
     confidence: 0.85
     domain: workflow
-    source: retrospective-2026-02-07
+    source: retrospective_2026_02_07
+
+  # === 学习与成长本能 ===
+
+  - id: user-learning-preferences
+    trigger: "用户想要学习如何备份和迭代个人经验"
+    action: |
+      提供完整方案：
+      1. 启用 continuous-learning-v2 技能
+      2. 使用 /instinct-export 导出备份
+      3. 保存到 GitHub 私有仓库
+      4. 使用 /instinct-import 恢复
+    confidence: 0.9
+    domain: workflow
+    evidence: 用户明确表达想要备份和恢复学习经验的需求
+
+  - id: opencode-session-analysis
+    trigger: "用户想分析自己的使用习惯和历史session"
+    action: |
+      使用 session_list 列出所有历史 session
+      使用 session_read 读取每个 session 的详细内容
+      分析用户行为模式、工作流偏好、工具使用习惯
+      提取关键信息并总结
+    confidence: 0.85
+    domain: workflow
+    evidence: 用户明确要求扫描历史 session 并提取使用习惯
+
+  - id: github-backup-workflow
+    trigger: "用户要将个人数据备份到GitHub"
+    action: |
+      完整备份流程：
+      1. 检查 git status
+      2. 创建/更新备份文件
+      3. git add . 
+      4. git commit -m "Backup $(date)"
+      5. git push
+    confidence: 0.9
+    domain: workflow
+    evidence: 用户提供了具体的 GitHub 仓库 URL
+
+  # === 技术分析本能 ===
+
+  - id: technical-deep-dive
+    trigger: "用户想深入学习某个技术的实现原理"
+    action: |
+      分析流程：
+      1. 先用 glob/grep 搜索关键文件
+      2. 读取核心源码分析
+      3. 提取技术架构和实现逻辑
+      4. 用图表/流程图解释
+      5. 提供代码示例
+    confidence: 0.85
+    domain: technical_analysis
+    evidence: 用户要求分析 APK 反编译的技术实现
+
+  - id: apk-reverse-engineering
+    trigger: "用户想要反编译分析APK"
+    action: |
+      步骤：
+      1. 使用 apktool 反编译 APK
+      2. 分析 AndroidManifest.xml 了解权限和组件
+      3. 分析 smali 代码理解业务逻辑
+      4. 分析 assets 资源文件
+      5. 注意版权和法律边界
+    confidence: 0.8
+    domain: security
+    evidence: 用户提供了具体的 APK 文件路径
+
+  # === 系统化工作本能 ===
+
+  - id: user-intent-classification
+    trigger: "收到用户请求时需要先理解真正意图"
+    action: |
+      分类流程：
+      - 研究类(explain/how): 探索+综合→回答
+      - 实现类(implement/add/create): 规划→委托/执行
+      - 调查类(look into/check): 探索→报告
+      - 评估类(what do you think): 评估→建议→等待确认
+      - 修复类(error/broken): 诊断→最小化修复
+      - 开放类(improve/refactor): 评估代码库→建议方法
+    confidence: 0.9
+    domain: workflow
+    evidence: 系统化的意图分类是高效工作的基础
+
+  - id: parallel-execution
+    trigger: "需要执行多个独立的搜索或分析任务"
+    action: |
+      并行执行原则：
+      1. 独立的任务同时发射
+      2. 使用 run_in_background=true
+      3. 使用 explore/librarian 代理
+      4. 继续主流程工作
+      5. 必要时用 background_output 收集结果
+    confidence: 0.85
+    domain: performance
+    evidence: 多个独立的文件读取/搜索应该并行执行
+
+  - id: todo-management
+    trigger: "收到多步骤的非平凡任务"
+    action: |
+      Todo 工作流：
+      1. 立即创建 todo 列表规划原子步骤
+      2. 每个步骤标记 in_progress/completed
+      3. 完成后立即标记，从不批量
+      4. 完成后验证诊断
+    confidence: 0.9
+    domain: workflow
+    evidence: 多步骤任务必须用 todo 跟踪以保证可见性和恢复能力
+
+# === 用户偏好 ===
+
+preferences:
+  communication:
+    - 简洁直接，不说废话
+    - 直接开始工作，不用事先汇报
+    - 用 todo 跟踪进度而非状态更新
+  
+  code_quality:
+    - 永远不使用 as any / @ts-ignore 抑制类型错误
+    - 永远不空 catch 块
+    - 永远不删除失败测试来"通过"
+  
+  delegation:
+    - 优先委托而非自己执行
+    - 使用合适的 category 和 skills
+  
+  verification:
+    - 编辑后运行 lsp_diagnostics
+    - 构建命令必须 exit code 0
+    - 测试必须 pass
+
+# === 学习到的模式 ===
+
+learned_patterns:
+  - 用户是开发者，对技术有深入兴趣
+  - 用户注重学习和自我提升
+  - 用户重视数据备份和安全
+  - 用户使用 Windows 环境
+  - 用户对 AI/机器学习应用有兴趣
+  - 用户想要建立可积累、可传承的经验系统
+  - 用户对逆向工程和分析有兴趣（APK反编译）
+  - 用户关注长期经验积累和备份
+
+# === 元信息 ===
+
+meta:
+  version: "2.1"
+  total_instincts: 11
+  created_at: "2026-02-22T09:30:00Z"
+  last_updated: "2026-02-22T17:35:00Z"
+  backup_source: "OpenCode Session Analysis"
+  github_repo: "https://github.com/skyconnfig/my-instincts-backup"
+  
+  # 更新日志
+  changelog:
+    - version: "2.1"
+      date: "2026-02-22"
+      changes:
+        - 新增用户学习偏好本能
+        - 新增session分析本能
+        - 新增GitHub备份工作流本能
+        - 新增技术深度分析本能
+        - 新增APK逆向工程本能
+        - 新增意图分类本能
+        - 新增并行执行本能
+        - 新增TODO管理本能
+        - 添加用户偏好说明
+        - 添加学习模式总结
