--- a/instincts.yaml
+++ b/instincts.yaml
@@ -1,253 +1,218 @@
----
-version: "2.2"
-exported_by: "continuous-learning-v2"
-export_date: "2026-02-22T17:50:00Z"
-source_session: "ses_37b598752ffe8cyf5D822PNSSN"
----
+# ============================================
+# 用户本能文件 - 基于历史 Session 分析
+# 生成时间: 2026-02-22
+# 来源: OpenCode Session ses_37b598752ffe8cyf5D822PNSSN
+# ============================================
 
-# 我的本能备份
-# 基于 OpenCode Session 分析创建
-# 包含历史学习经验和用户偏好
+metadata:
+  version: "1.0.0"
+  created: "2026-02-22"
+  last_updated: "2026-02-22"
+  source_session: "ses_37b598752ffe8cyf5D822PNSSN"
+  github_user: "skyconnfig"
 
-instincts:
-  # === 核心工作流本能 ===
-
-  - id: project-retrospective-workflow
-    trigger: "when user asks for retrospective or lesson learned"
-    confidence: 0.9
-    domain: workflow
-    source: retrospective_session_2026_02_07
-
-  - id: fullstack-development-principles
-    trigger: "when starting a full-stack development project"
-    confidence: 0.85
-    domain: workflow
-    source: retrospective_2026_02_07
-
-  # === Git 操作本能 ===
-
-  - id: git-initialization-workflow
-    trigger: "用户想要初始化git仓库并推送到GitHub"
-    action: |
-      完整流程：
-      1. git init 初始化仓库
-      2. 创建 .gitignore 文件
-      3. git add . && git commit 首次提交
-      4. 用户提供 GitHub URL
-      5. git remote add origin <url>
-      6. git push -u origin main
-    confidence: 0.95
-    domain: git
-    evidence: 用户多次执行初始化、提交、推送流程
-
-  - id: git-large-file-handling
-    trigger: "推送大文件或大量文件时遇到超时"
-    action: |
-      解决方案：
-      1. git lfs install 安装 LFS
-      2. git lfs track "*.mp3" "*.wav" "*.exe" 等
-      3. 创建 .gitattributes
-      4. 重新提交 (git add .gitattributes && git commit --amend)
-      5. git push -u origin main
-    confidence: 0.9
-    domain: git
-    evidence: 用户推送896MB音频文件时使用LFS解决超时问题
-
-  - id: github-repo-creation
-    trigger: "用户想推送代码但没有GitHub仓库"
-    action: |
-      流程：
-      1. 询问用户 GitHub 用户名或仓库 URL
-      2. 用户提供 URL 后 git remote add origin <url>
-      3. git push -u origin main
-      4. 验证推送结果
-    confidence: 0.9
-    domain: git
-    evidence: 用户创建了 https://github.com/skyconnfig/yinyue
-
-  # === 学习与成长本能 ===
-
-  - id: user-learning-preferences
-    trigger: "用户想要学习如何备份和迭代个人经验"
-    action: |
-      提供完整方案：
-      1. 启用 continuous-learning-v2 技能
-      2. 使用 /instinct-export 导出备份
-      3. 保存到 GitHub 私有仓库
-      4. 使用 /instinct-import 恢复
-    confidence: 0.95
-    domain: workflow
-    evidence: 用户明确表达想要备份和恢复学习经验的需求
-
-  - id: opencode-session-analysis
-    trigger: "用户想分析自己的使用习惯和历史session"
-    action: |
-      使用 session_list 列出所有历史 session
-      使用 session_read 读取每个 session 的详细内容
-      分析用户行为模式、工作流偏好、工具使用习惯
-      提取关键信息并总结
-    confidence: 0.9
-    domain: workflow
-    evidence: 用户明确要求扫描历史 session 并提取使用习惯
-
-  - id: github-backup-workflow
-    trigger: "用户要将个人数据备份到GitHub"
-    action: |
-      完整备份流程：
-      1. 检查 git status
-      2. 创建/更新备份文件
-      3. git add . 
-      4. git commit -m "Backup $(date)"
-      5. git push
-    confidence: 0.95
-    domain: workflow
-    evidence: 用户提供了具体的 GitHub 仓库 URL 并成功备份
-
-  # === 技术分析本能 ===
-
-  - id: technical-deep-dive
-    trigger: "用户想深入学习某个技术的实现原理"
-    action: |
-      分析流程：
-      1. 先用 glob/grep 搜索关键文件
-      2. 读取核心源码分析
-      3. 提取技术架构和实现逻辑
-      4. 用图表/流程图解释
-      5. 提供代码示例
-    confidence: 0.85
-    domain: technical_analysis
-    evidence: 用户要求分析 APK 反编译的技术实现
-
-  - id: apk-reverse-engineering
-    trigger: "用户想要反编译分析APK"
-    action: |
-      步骤：
-      1. 使用 apktool 反编译 APK
-      2. 分析 AndroidManifest.xml 了解权限和组件
-      3. 分析 smali 代码理解业务逻辑
-      4. 分析 assets 资源文件
-      5. 注意版权和法律边界
-    confidence: 0.8
-    domain: security
-    evidence: 用户提供了具体的 APK 文件路径
-
-  # === 系统化工作本能 ===
-
-  - id: user-intent-classification
-    trigger: "收到用户请求时需要先理解真正意图"
-    action: |
-      分类流程：
-      - 研究类(explain/how): 探索+综合→回答
-      - 实现类(implement/add/create): 规划→委托/执行
-      - 调查类(look into/check): 探索→报告
-      - 评估类(what do you think): 评估→建议→等待确认
-      - 修复类(error/broken): 诊断→最小化修复
-      - 开放类(improve/refactor): 评估代码库→建议方法
-    confidence: 0.9
-    domain: workflow
-    evidence: 系统化的意图分类是高效工作的基础
-
-  - id: parallel-execution
-    trigger: "需要执行多个独立的搜索或分析任务"
-    action: |
-      并行执行原则：
-      1. 独立的任务同时发射
-      2. 使用 run_in_background=true
-      3. 使用 explore/librarian 代理
-      4. 继续主流程工作
-      5. 必要时用 background_output 收集结果
-    confidence: 0.85
-    domain: performance
-    evidence: 多个独立的文件读取/搜索应该并行执行
-
-  - id: todo-management
-    trigger: "收到多步骤的非平凡任务"
-    action: |
-      Todo 工作流：
-      1. 立即创建 todo 列表规划原子步骤
-      2. 每个步骤标记 in_progress/completed
-      3. 完成后立即标记，从不批量
-      4. 完成后验证诊断
-    confidence: 0.9
-    domain: workflow
-    evidence: 多步骤任务必须用 todo 跟踪以保证可见性和恢复能力
-
-  # === 项目管理本能 ===
-
-  - id: project-file-organization
-    trigger: "用户有大量音频/媒体文件需要管理"
-    action: |
-      建议方案：
-      1. 按用途分类目录（暖场、倒计时、上场、颁奖等）
-      2. 使用 Git LFS 存储大文件
-      3. 创建 README.md 说明目录结构
-      4. .gitignore 忽略临时文件和系统文件
-    confidence: 0.85
-    domain: project_management
-    evidence: 用户有大量音频文件需要版本控制
-
-# === 用户偏好 ===
-
-preferences:
-  communication:
-    - 简洁直接，不说废话
-    - 直接开始工作，不用事先汇报
-    - 用 todo 跟踪进度而非状态更新
-    - 喜欢用数字选项让用户选择（1、2、3）
+# ============================================
+# 沟通偏好
+# ============================================
+communication:
+  language: "zh-CN"
+  style:
+    - "简洁直接，不需要过多客套话"
+    - "避免 AI 味道过重的表达（如'我来帮你...'、'让我看看...'）"
+    - "直接开始工作，不需要状态更新式的开场白"
+    - "用 Todo 列表追踪进度，而不是口述"
   
-  code_quality:
-    - 永远不使用 as any / @ts-ignore 抑制类型错误
-    - 永远不空 catch 块
-    - 永远不删除失败测试来"通过"
-  
-  delegation:
-    - 优先委托而非自己执行
-    - 使用合适的 category 和 skills
-  
-  verification:
-    - 编辑后运行 lsp_diagnostics
-    - 构建命令必须 exit code 0
-    - 测试必须 pass
+  anti_patterns:
+    - "不要说'好的，我来帮你'"
+    - "不要说'让我先看看'"
+    - "不要过度解释，除非被问到"
+    - "不要用 emoji 除非用户使用"
 
+# ============================================
+# 技术偏好
+# ============================================
+technical:
   git:
-    - 推送失败时考虑使用 Git LFS
-    - 重视 .gitignore 配置
-    - 喜欢创建 README 文档
+    username: "skyconnfig"
+    email: "skyconnfig@users.noreply.github.com"
+    commit_style: "conventional commits (feat/fix/docs/refactor)"
+    
+  github:
+    preferred_backup_repo: "https://github.com/skyconnfig/my-instincts-backup"
+    skill_repo: "https://github.com/skyconnfig/skill"
+    
+  editor:
+    platform: "windows"
+    home: "C:\\Users\\lixin"
+    
+  stack_preferences:
+    - "TypeScript over JavaScript"
+    - "React + Next.js for frontend"
+    - "Python for scripting"
+    - "YAML for configuration"
 
-# === 学习到的模式 ===
-
-learned_patterns:
-  - 用户是开发者，对技术有深入兴趣
-  - 用户注重学习和自我提升
-  - 用户重视数据备份和安全
-  - 用户使用 Windows 环境
-  - 用户对 AI/机器学习应用有兴趣
-  - 用户想要建立可积累、可传承的经验系统
-  - 用户对逆向工程和分析有兴趣（APK反编译）
-  - 用户关注长期经验积累和备份
-  - 用户经常处理音频/视频文件
-  - 用户使用 GitHub 作为主要代码托管平台
-  - 用户有 skyconnfig GitHub 账号
-
-# === 元信息 ===
-
-meta:
-  version: "2.2"
-  total_instincts: 14
-  created_at: "2026-02-22T09:30:00Z"
-  last_updated: "2026-02-22T17:50:00Z"
-  backup_source: "OpenCode Session Analysis"
-  github_repo: "https://github.com/skyconnfig/my-instincts-backup"
+# ============================================
+# 工作流偏好
+# ============================================
+workflow:
+  approach: "先规划，后执行"
+  planning:
+    - "创建详细的 Todo 列表"
+    - "标记 in_progress 和 completed"
+    - "按优先级排序"
   
-  # 更新日志
-  changelog:
-    - version: "2.2"
-      date: "2026-02-22"
-      changes:
-        - 新增 Git 初始化工作流本能
-        - 新增大文件处理本能（Git LFS）
-        - 新增 GitHub 仓库创建本能
-        - 新增项目文件组织本能
-        - 更新用户偏好：添加数字选项偏好、Git 相关偏好
-        - 更新学习模式：添加音频文件处理、GitHub 使用习惯
-        - 总本能数量：11 → 14
+  execution:
+    - "并行执行独立任务"
+    - "遇到问题先诊断再修复"
+    - "每次修改后验证结果"
+    
+  backup_strategy:
+    philosophy: "所有重要数据都应该有备份和恢复方案"
+    preferred_locations:
+      - "GitHub 私有仓库"
+      - "本地 YAML 文件"
+    requirements:
+      - "必须支持版本控制"
+      - "必须支持跨设备同步"
+      - "必须支持一键恢复"
+
+# ============================================
+# 项目结构偏好
+# ============================================
+project_structure:
+  skills:
+    required_files:
+      - "SKILL.md (主文档)"
+      - "examples/ (示例代码)"
+      - "guides/ (详细指南)"
+      - "scripts/ (可选脚本)"
+    
+  naming_conventions:
+    files: "kebab-case"
+    folders: "kebab-case"
+    yaml_keys: "snake_case"
+    
+  documentation:
+    style: "简洁、实用、代码优先"
+    sections:
+      - "Quick Start"
+      - "Examples"
+      - "API Reference"
+      - "Troubleshooting"
+
+# ============================================
+# 错误处理偏好
+# ============================================
+error_handling:
+  approach: "最小化修复，不改无关代码"
+  debugging:
+    - "先诊断根因"
+    - "复现问题"
+    - "隔离变量"
+    - "针对性修复"
+  
+  anti_patterns:
+    - "不要 shotgun debugging"
+    - "不要在修复时顺便重构"
+    - "不要忽略警告"
+
+# ============================================
+# 学习和进化偏好
+# ============================================
+learning:
+  continuous_learning:
+    enabled: true
+    method: "hooks-based observation"
+    storage: "~/.claude/homunculus/instincts/"
+    
+  skill_evolution:
+    process: "instinct -> skill -> command -> agent"
+    min_confidence_to_evolve: 0.7
+    
+  backup_frequency: "每次重要变更后"
+  export_format: "YAML"
+
+# ============================================
+# 本能条目（原子行为）
+# ============================================
+instincts:
+  - id: "instinct-001"
+    name: "GitHub 备份优先"
+    trigger:
+      - "用户提到备份"
+      - "用户提到恢复"
+      - "用户提到跨设备同步"
+    action: "优先推荐 GitHub 私有仓库方案"
+    confidence: 0.9
+    domain: "workflow"
+    learned_from: "session ses_37b598752ffe8cyf5D822PNSSN"
+    
+  - id: "instinct-002"
+    name: "完整步骤文档"
+    trigger:
+      - "用户需要配置"
+      - "用户需要安装"
+      - "用户需要部署"
+    action: "提供完整、可复制粘贴的步骤，包括所有命令"
+    confidence: 0.85
+    domain: "documentation"
+    learned_from: "session ses_37b598752ffe8cyf5D822PNSSN"
+    
+  - id: "instinct-003"
+    name: "中文简洁沟通"
+    trigger:
+      - "所有中文交互"
+    action: "使用中文，简洁直接，避免 AI 味道"
+    confidence: 0.95
+    domain: "communication"
+    learned_from: "session ses_37b598752ffe8cyf5D822PNSSN"
+    
+  - id: "instinct-004"
+    name: "Todo 驱动工作"
+    trigger:
+      - "多步骤任务"
+      - "复杂实现"
+    action: "创建详细的 Todo 列表，实时更新状态"
+    confidence: 0.9
+    domain: "workflow"
+    learned_from: "session ses_37b598752ffe8cyf5D822PNSSN"
+    
+  - id: "instinct-005"
+    name: "验证后才报告完成"
+    trigger:
+      - "任务完成前"
+      - "提交代码前"
+    action: "运行验证命令，确认结果后才报告完成"
+    confidence: 0.9
+    domain: "quality"
+    learned_from: "session ses_37b598752ffe8cyf5D822PNSSN"
+
+# ============================================
+# 项目特定知识
+# ============================================
+project_knowledge:
+  demo_project:
+    path: "C:\\Users\\lixin\\Desktop\\opencode\\demo"
+    type: "OpenCode skill development"
+    skills_added:
+      - "spline-3d-integration"
+      
+  skill_repository:
+    url: "https://github.com/skyconnfig/skill"
+    purpose: "存储所有自定义 skills"
+    last_push: "2026-02-22"
+    
+  backup_repository:
+    url: "https://github.com/skyconnfig/my-instincts-backup"
+    purpose: "备份本能和经验"
+    branch: "main"
+
+# ============================================
+# 禁止行为
+# ============================================
+forbidden:
+  - "不要提交敏感信息到公开仓库"
+  - "不要在用户没要求时自动 commit"
+  - "不要使用 background_cancel(all=true) 当 Oracle 运行时"
+  - "不要跳过 Oracle 结果收集"
+  - "不要使用 @ts-ignore 或 as any"
